deploy.yml  설정